Fixed recruitment bar taking too much space

--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -6,7 +6,7 @@
     //margin: 0 2.5vw 0 2.5vw;
     width: 100vw;
     height: 100%;
-    margin-top: 56px; //the default menu bar is 56px height
+    //margin-top: 56px; //the default menu bar is 56px height
     // margin-bottom: 8vh;
     .bigMap {
         width: 100vw;
@@ -19,7 +19,7 @@
 //This is added because the navbar expands at around ipad breaking point and want to push the map down
 @media screen and (max-width: 1200px) {
     .mapBox {
-        margin-top: 150px;
+        //margin-top: 150px;
         .bigMap {
             max-height: 35vh;
         }
